# Growth-AI-Intelligence-Python

./: .env.example  .gitignore  README.md  config.example.toml  pyproject.toml
data/raw/: sample_growth.csv  sample_growth.xlsx  sample_growth_negative_2026_06_01.csv  sample_growth_week_2026_05_11.csv  sample_growth_week_2026_05_18.csv
data/reports/: weekly_reports.json
scripts/: seed_sample_reports.py
src/growth_report/: __init__.py  cli.py  config.py  dashboard.py  dates.py  models.py  normalization.py  pipeline.py
src/growth_report/collectors/: __init__.py  extractors.py  factory.py
src/growth_report/services/: report_generator.py  report_generator_factory.py  storage.py
src/growth_report/ui/: __init__.py  components.py  formatters.py  import_sources.py  metrics.py  page_router.py  report_store.py  theme.css  theme.py
src/growth_report/ui/pages/: actions.py  campaigns.py  channels.py  data.py  history.py  imports.py  overview.py
tests/: test_collectors.py  test_config.py  test_dates.py  test_normalization.py  test_report_generator_factory.py  test_storage.py  test_ui_formatters.py  test_ui_metrics.py
